fvg cleanup
